# whirl

./: .editorconfig  .gitattributes  .gitignore  .whirl.env  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  whirl
.claude/agents/: ci-verifier.md
.github/workflows/: whirl-ci.yml  whirl-release.yml
docker/airflow/: Dockerfile  delete_all_airflow_connections.py  entrypoint.sh
docker/airflow-python/: Dockerfile  delete_all_airflow_connections.py  entrypoint.sh  harden.sh  nginx-ssl.conf  pip.conf
docker/aws-spark/: Dockerfile
docker/hive/: Dockerfile  core-site.xml  hive-site.xml  init-hive.sh
docker/patched-localstack/: Dockerfile
envs/airflow-s3-logging/: .whirl.env  docker-compose.yml
envs/airflow-with-mockserver/: .whirl.env  docker-compose.yml
envs/api-python-s3/: .whirl.env  docker-compose.yml
envs/api-python-s3-k8s/: .gitignore  .whirl.env  README.md  docker-compose.yml  entrypoint.sh
envs/api-s3-dataset/: .whirl.env  docker-compose.yml
envs/datahub-metadata/: .whirl.env  docker-compose.yml
envs/dbt-athena-glue-s3/: .gitignore  .whirl.env  README.md  docker-compose.yml
envs/dbt-databricks-example/: docker-compose.yml
envs/dbt-example/: .gitignore  .whirl.env  docker-compose.yml
envs/default/: docker-compose.yml
envs/external-airflow-db/: .whirl.env  docker-compose.yml
envs/external-smtp-config/: .whirl.env  docker-compose.yml
envs/ha-scheduler/: docker-compose.yml
logo/: README.md  logo.py  requirements.txt
tests/: conftest.py  test_dag_validation.py  test_foundation.py  test_setup_scripts.py
(+312 files in other folders)
