[project]
name = "whirl"
version = "0.1.0"
description = "Docker-based local development and testing tool for Apache Airflow workflows"
readme = "README.md"
# Pinned to the 3.13 series: it matches the Docker image / CI matrix and is the
# newest Python that Apache Airflow 3.2.1 supports. Widening this (e.g. to 3.14)
# breaks resolution of the `test` group, which installs apache-airflow.
requires-python = ">=3.13,<3.14"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
# Test toolchain (managed with uv). Installs Airflow + the curated provider set
# required to parse the "core subset" of example DAGs. See tests/ and CONTRIBUTING.md.
test = [
    "pytest>=8",
    "apache-airflow==3.2.1",
    "apache-airflow-providers-standard",
    "apache-airflow-providers-amazon",
    "apache-airflow-providers-http",
    "apache-airflow-providers-apache-spark",
    "apache-airflow-providers-common-sql",
    "apache-airflow-providers-ssh",
    "apache-airflow-providers-sftp",
    "apache-airflow-providers-mysql",
    "pendulum",
    "pandas",
    "ephem",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "dag_validation: validates that example DAGs parse without import errors",
    "setup_scripts: structural/convention checks for whirl setup scripts",
]